add project summary and read me
